# Universal-Adapter

./: .env  .gitignore  GEMINI_MODES.md  README.md  check_vertex_env.py  config.example.yaml  config.yaml  main.py  pyproject.toml  set_env.py  structure.txt  test_fallback_quick.py  test_multi_region.py
.kiro/specs/llm-adapter/: design.md  requirements.md  tasks.md
docs/: gemini_region_fallback.md  generation_params_config.md  generation_params_quick_start.md  http_client_concurrency.md  multimodal_interface.md  multimodal_quick_start.md  request_logging.md
examples/: dashscope_comprehensive_example.py  dashscope_example.py  dashscope_modes_example.py  dashscope_quick_start.py  gemini_example.py  gemini_modes_example.py  gemini_multi_region_example.py  gemini_region_fallback_example.py  generation_params_example.py  list_vertex_models.py  multimodal_example.py  openrouter_cost_test.py  openrouter_example.py  openrouter_multimodal_example.py  select_provider_example.py  test_multimodal_implementation.py
llm_adapter/: __init__.py  adapter.py  billing.py  config.py  fallback_tracker.py  logger.py  models.py  request_logger.py  router.py
llm_adapter/adapters/: __init__.py  base.py  cloudflare_adapter.py  dashscope_adapter.py  gemini_adapter.py  huggingface_adapter.py  openai_adapter.py  openrouter_adapter.py
scripts/: provider_speed_test.py
tests/: test_adapter_properties.py  test_billing_properties.py  test_config_properties.py  test_logger_properties.py  test_models_properties.py  test_proxy_speed.py  test_router_properties.py
what to do/: chat1.md
